# libhfsaver

./: .gitignore  CMakeLists.txt  README.md
example/java/demo/: lib  pom.xml
example/java/demo/lib/: hfsaver_shared.lib
example/java/demo/src/main/java/com/libhfsaver/: HfsTaskInfo.java  HfsVideoInfo.java  JNI.java  Main.java
include/: error_map.hpp  hfs.hpp  jni_libhfsaver.h  libhfsaver.h  singleton.hpp  thread_pool.hpp  utils.hpp
lib/FFmpeg/: CMakeLists.txt
output/include/: libhfsaver.h
output/lib/: hfsaver_shared.exp  hfsaver_shared.lib  hfsaver_static.lib
src/: error_map.cc  hfs.cc  jni_libhfsaver.cc  libhfsaver.cc  main.cc  utils.cc
test/: CMakeLists.txt  main.cc
